# l2-orderbook-pipeline

./: .gitignore  BENCHMARKS.md  DECISIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: profile.pstats  profile.txt  stress_report.json
config/: default.yaml
ops/: docker-compose.yml  prometheus.yml
ops/grafana/dashboards/: l2-pipeline.json
ops/grafana/provisioning/dashboards/: dashboards.yml
scripts/: stress_replay.py
src/l2_pipeline/: app.py  config.py  logging_setup.py  metrics.py  supervisor.py
src/l2_pipeline/book/: __init__.py  engine.py  types.py
src/l2_pipeline/feeds/: __init__.py  binance.py  connection.py  envelope.py  okx.py  ratelimit.py  transport.py
src/l2_pipeline/simulation/: __init__.py  convergence.py  driver.py  faults.py  market.py  seeding.py
src/l2_pipeline/sinks/: parquet_sink.py
tests/fixtures/binance/: README.md  depth_diff_bids_only.json  depth_diff_malformed_bad_level_shape.json  depth_diff_malformed_missing_field.json  depth_diff_normal.json  depth_snapshot.json
tests/fixtures/okx/: README.md  books_malformed_bad_level_shape.json  books_malformed_missing_seqid.json  books_snapshot.json  books_update_asks_only.json  books_update_normal.json  subscribe_ack.json
tests/simulation/: test_parquet_e2e.py  test_properties.py  test_scenarios.py
tests/unit/: _fake_transport.py  test_binance_control_loop.py  test_binance_parsing.py  test_binance_watchdog.py  test_book_engine.py  test_config.py  test_connection.py  test_metrics.py  test_okx_client.py  test_okx_parsing.py  test_parquet_sink.py  test_ratelimit.py  test_reconnect_escalation.py  test_supervisor.py
