[project]
name = "l2-pipeline"
version = "0.1.0"
description = "Multi-exchange L2 order book ingestion and reconstruction pipeline"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.28.1",
    "pyyaml>=6.0",
    "websockets>=16.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
    "hypothesis>=6.156.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/l2_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
